MVC improvements, building shop gui refreshing bugfix